fix: higher contrast color

--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ img.resource-fig {
 .link-box {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #3498db; /* 初始颜色 */
+    background-color: #0E4A71; /* 初始颜色 */
     color: white;
     text-decoration: none;
     border-radius: 5px;
